# Nytrogen

./: .gitignore  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TODO.md  \  ast.txt  build.sh  clean_run.sh  cmake_install.cmake  commit.sh  compile_commands.json  correctasm.asm  full_code.txt  gemini_context.md  gtk.ny  init.lua  math.nyt  message_to_user.txt  out  out.asm  output.txt  preprocessed_output.nyt  printer.nyt  run.sh  run_tests.sh  runasm.sh  stress2.ny  stress_test.ny  test.ny  test.nyt  test2.ny  test_features.nyt  test_structs.nyt
Preprocessor/: CMakeLists.txt  Makefile  build.sh  clean_run.sh  cmake_install.cmake  run.sh
arch/: PKGBUILD
bootstrap/: clean_run.sh  expected.asm  full_code.txt
compiler/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake
docs/: architecture.md  getting_started.md  grammar.md  grammer.md  test_errors.md
driver/: CMakeLists.txt  Makefile  cmake_install.cmake  driver.cpp
driver/include/: config_loader.hpp
driver/src/: config_loader.cpp  driver.cpp
include/: ast.hpp  code_generator.hpp  lexer.hpp  parser.hpp  semantic_analyzer.hpp  symbol_table.hpp
nytrogen-0.1/: README.md
run_scripts/: build.sh  clean_build.sh  clean_run.sh  run.sh
src/: ast.hpp  code_generator.cpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  semantic_analyzer.cpp
std/: stdlib.nyt
tests/: hello.asm  local_include.nyt  namespaces.ny  parser.cpp  printer.nyt  test.asm  test.cpp  test.ny  test3.ny  test_abi.nyt  test_arrays.nyt  test_asm.nyt  test_auto.ny  test_const.nyt  test_echo.ny  test_enum.nyt  (+30 more)
(+62 files in other folders)
